[gd_scene load_steps=9 format=3 uid="uid://q3faxnub4wax"]

[ext_resource type="Script" path="res://items/drillblock.gd" id="1_nxjg5"]
[ext_resource type="Script" path="res://Enemies/domeo/area_2d2.gd" id="2_pmlun"]
[ext_resource type="Texture2D" uid="uid://ctduwr8twlaqy" path="res://items/breakable2.png" id="3_50mux"]
[ext_resource type="AudioStream" uid="uid://duwmhp3jt3pod" path="res://music/SFX/Battle Star2.wav" id="4_8u82h"]
[ext_resource type="Texture2D" uid="uid://bqpri73aj0vsr" path="res://items/breakable1.png" id="4_qijhu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7qpq"]
size = Vector2(82.7426, 82.2558)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qt5xh"]
size = Vector2(62.2078, 96.1711)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ycoc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_50mux")
}],
"loop": false,
"name": &"death",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qijhu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
scale = Vector2(1.65574, 1.61691)
script = ExtResource("1_nxjg5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-0.301977, -0.927692)
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_h7qpq")

[node name="PlayerDetector" type="Area2D" parent="CharacterBody2D"]
position = Vector2(3.8147e-06, 0.618465)
script = ExtResource("2_pmlun")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/PlayerDetector"]
position = Vector2(0.301974, -13.7608)
shape = SubResource("RectangleShape2D_qt5xh")

[node name="RayCastRight" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(-1.13687e-13, 3.55271e-15)
target_position = Vector2(25.3663, -3.55271e-15)

[node name="RayCastLeft" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(1.90735e-06, 0)
target_position = Vector2(-25.3663, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
z_index = -1
position = Vector2(-9.53674e-07, -0.618464)
scale = Vector2(0.884821, 0.871998)
sprite_frames = SubResource("SpriteFrames_4ycoc")

[node name="BounceSound" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
position = Vector2(1.19209e-07, -15.4616)
stream = ExtResource("4_8u82h")
volume_db = 5.0

[connection signal="body_entered" from="CharacterBody2D/PlayerDetector" to="CharacterBody2D" method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/PlayerDetector" to="CharacterBody2D" method="_on_player_detector_body_exited"]
